[gd_scene load_steps=9 format=3 uid="uid://c7sn4u85xdtn1"]

[ext_resource type="Script" path="res://Scripts/UtilityPanel.gd" id="2_rygu7"]
[ext_resource type="Texture2D" uid="uid://d2xur6wembbym" path="res://Textures/OxygenDial_noArrow.png" id="3_4d7w1"]
[ext_resource type="Texture2D" uid="uid://bxxv87oukm70j" path="res://Textures/OxygenDial_Arrow.png" id="4_hkjey"]
[ext_resource type="Script" path="res://Scripts/OxygenDial.gd" id="5_18clv"]
[ext_resource type="Texture2D" uid="uid://bxxu3ifycy0qr" path="res://Textures/OxygenDial_ArrowCap.png" id="6_01jit"]
[ext_resource type="Texture2D" uid="uid://cexmt5qmgioir" path="res://Textures/CO2Dial.png" id="7_h1ufq"]
[ext_resource type="Script" path="res://Scripts/CO2Arrow.gd" id="8_k2m8a"]
[ext_resource type="FontFile" uid="uid://brsai08ijo7q6" path="res://Effects/Fonts/Tiny5/Tiny5-Regular.ttf" id="10_2u70n"]

[node name="MenuPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TabBar" type="TabBar" parent="."]
layout_mode = 0
offset_left = 160.0
offset_right = 410.0
offset_bottom = 40.0
theme_override_fonts/font = ExtResource("10_2u70n")
theme_override_font_sizes/font_size = 25
tab_count = 2
current_tab = 1
clip_tabs = false
scrolling_enabled = false
tabs_rearrange_group = 0
scroll_to_selected = false
tab_0/title = "Settings"
tab_1/title = "Utilities"

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 320.0
offset_top = 128.0
offset_right = 832.0
offset_bottom = 512.0
script = ExtResource("2_rygu7")

[node name="UtilityTabBar" type="TabBar" parent="Panel"]
layout_mode = 0
offset_top = -31.0
offset_right = 512.0
theme_override_fonts/font = ExtResource("10_2u70n")
tab_count = 6
tab_alignment = 1
clip_tabs = false
scrolling_enabled = false
tabs_rearrange_group = 1
scroll_to_selected = false
tab_0/title = "Overview"
tab_1/title = "Atmosphere"
tab_2/title = "Supply"
tab_3/title = "Crew"
tab_4/title = "Power"
tab_5/title = "Launch"

[node name="OverviewPanel" type="Panel" parent="Panel"]
visible = false
layout_mode = 0
offset_right = 512.0
offset_bottom = 384.0

[node name="AtmospherePanel" type="Panel" parent="Panel"]
visible = false
layout_mode = 0
offset_right = 512.0
offset_bottom = 384.0

[node name="BackPanel" type="TextureRect" parent="Panel/AtmospherePanel"]
top_level = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -464.0
offset_top = 152.0
offset_right = -336.0
offset_bottom = 280.0
grow_horizontal = 0
texture = ExtResource("3_4d7w1")

[node name="Arrow" type="TextureRect" parent="Panel/AtmospherePanel/BackPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
rotation = -0.668461
pivot_offset = Vector2(64, 64)
texture = ExtResource("4_hkjey")
script = ExtResource("5_18clv")

[node name="ArrowCover" type="TextureRect" parent="Panel/AtmospherePanel/BackPanel"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 128.0
texture = ExtResource("6_01jit")

[node name="CO2BackPanel" type="TextureRect" parent="Panel/AtmospherePanel"]
top_level = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -464.0
offset_top = 336.0
offset_right = -336.0
offset_bottom = 464.0
grow_horizontal = 0
texture = ExtResource("7_h1ufq")

[node name="Arrow" type="TextureRect" parent="Panel/AtmospherePanel/CO2BackPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
rotation = -0.668461
pivot_offset = Vector2(64, 64)
texture = ExtResource("4_hkjey")
script = ExtResource("8_k2m8a")

[node name="ArrowCover" type="TextureRect" parent="Panel/AtmospherePanel/CO2BackPanel"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 128.0
texture = ExtResource("6_01jit")

[node name="OxygenLabel" type="Label" parent="Panel/AtmospherePanel"]
layout_mode = 0
offset_left = 248.0
offset_top = 32.0
offset_right = 360.0
offset_bottom = 64.0
theme_override_fonts/font = ExtResource("10_2u70n")
theme_override_font_sizes/font_size = 25
text = "OXYGEN"
horizontal_alignment = 1
uppercase = true

[node name="OxygenStats" type="Label" parent="Panel/AtmospherePanel"]
layout_mode = 0
offset_left = 256.0
offset_top = 72.0
offset_right = 360.0
offset_bottom = 144.0
theme_override_fonts/font = ExtResource("10_2u70n")
theme_override_font_sizes/font_size = 12
text = "rats"
autowrap_mode = 3
uppercase = true

[node name="CO2Label" type="Label" parent="Panel/AtmospherePanel"]
layout_mode = 0
offset_left = 248.0
offset_top = 216.0
offset_right = 360.0
offset_bottom = 248.0
theme_override_fonts/font = ExtResource("10_2u70n")
theme_override_font_sizes/font_size = 25
text = "CO2"
horizontal_alignment = 1
uppercase = true

[node name="CO2Stats" type="Label" parent="Panel/AtmospherePanel"]
layout_mode = 0
offset_left = 256.0
offset_top = 256.0
offset_right = 360.0
offset_bottom = 328.0
theme_override_fonts/font = ExtResource("10_2u70n")
theme_override_font_sizes/font_size = 12
text = "rats"
autowrap_mode = 3
uppercase = true

[node name="SupplyPanel" type="Panel" parent="Panel"]
visible = false
layout_mode = 0
offset_right = 512.0
offset_bottom = 384.0

[node name="CrewPanel" type="Panel" parent="Panel"]
visible = false
layout_mode = 0
offset_right = 512.0
offset_bottom = 384.0

[node name="PowerPanel" type="Panel" parent="Panel"]
visible = false
layout_mode = 0
offset_right = 512.0
offset_bottom = 384.0

[node name="LaunchPanel" type="Panel" parent="Panel"]
visible = false
layout_mode = 0
offset_right = 512.0
offset_bottom = 384.0

[connection signal="tab_clicked" from="TabBar" to="Panel" method="_on_tab_bar_tab_clicked"]
[connection signal="tab_clicked" from="Panel/UtilityTabBar" to="Panel" method="_on_utility_tab_bar_tab_clicked"]
[connection signal="visibility_changed" from="Panel/AtmospherePanel/OxygenStats" to="Panel" method="_on_oxygen_stats_visibility_changed"]
[connection signal="visibility_changed" from="Panel/AtmospherePanel/CO2Stats" to="Panel" method="_on_oxygen_stats_visibility_changed"]
